<resources>
    <string name="app_name">Piktogramy Pawła</string>
    <string name="app_name_setup">Ustawienia</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_pictograms">Piktogramy</string>


    <!-- Action Bar  -->
    <string name="action_settings">Ustawienia</string>
    <string name="action_pictograms">Piktogramy</string>
    <string name="action_about">O programie</string>
    <string name="action_reset">Reset</string>
    <string name="action_battery"> </string>
    <string name="action_battery_charging">Charging</string>

    <string name="settings_main_header">Ogólne</string>
    <string name="pictogram_header">Piktogramy</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Podaj swoje imię</string>
    <string name="size_title">Wielkość ikon</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Sync Preferences -->
    <string name="about_title">Piktogramy Pawła Brzezińskiego</string>
    <string name="about_author">Autor:</string>
    <string name="about_author_name">Jacek Brzeziński</string>
    <string name="about_author_phone">Znalazcę proszę o kontakt \n z numerem </string>
    <string name="Zapisz">buttonNewIconSave</string>
    <string name="pick_image_intent_text">Select image</string>
    <string name="phone">Telefon</string>

</resources>