<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jacek.brzezinski.piktogramy.MainActivity">
    <item
        android:id="@+id/action_battery_charging"
        android:icon="@drawable/ic_charging"
        android:title="@string/action_battery_charging"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_battery_percent"
        android:title="@string/action_battery"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings_app"
        android:icon="@drawable/ic_action_menu"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_pictograms"
        android:icon="@drawable/ic_action_menu"
        android:orderInCategory="101"
        android:title="@string/action_pictograms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>