<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/aboutTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/about_title" />

    <TextView
        android:id="@+id/aboutTextViewAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:text="@string/about_author" />

    <TextView
        android:id="@+id/aboutTextViewAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="295dp"
        android:gravity="center"
        android:text="@string/about_author_name" />

</RelativeLayout>